# Fabled-Engine

./: .space.kts  CODE_OF_CONDUCT.md  Cargo.toml  Feature_List.txt  LICENSE  README.md  bloat_detail.txt  cube_asm_working_progress  llvm_ir  notes.txt  rustfmt.toml
crates/mani/fabled_asset/: Cargo.toml
crates/mani/fabled_audio/: Cargo.toml  feature.txt  todo
crates/mani/fabled_audio/lua_src/: audio_clip.lua  audio_listener.lua  create_play_audio.lua  raw_clip.lua  standard_output.lua
crates/mani/fabled_audio/src/: lib.rs
crates/mani/fabled_audio/src/audio/: license_and_attribution
crates/mani/fabled_audio/src/binding/: ambisonic_output_binding.rs  audio_binding.rs  audio_clip_binding.rs  audio_listener_binding.rs  mod.rs  raw_ambisonic_clip_binding.rs  raw_clip_binding.rs  standard_output_binding.rs
crates/mani/fabled_audio/src/clip/: audio_clip.rs  audio_collection.rs  mod.rs  raw_clip.rs  raw_collection.rs
crates/mani/fabled_audio/src/codecs/: mod.rs
crates/mani/fabled_audio/src/config/: input_config.rs  mod.rs  output_config.rs
crates/mani/fabled_audio/src/container/: audio_clip.rs  audio_descriptor.rs  audio_listener.rs  audio_spatial_output.rs  audio_spec.rs  audio_system.rs  audio_track.rs  audio_type.rs  device_config.rs  fade_filter.rs  flac_reader_options.rs  mod.rs  raw_clip.rs  sample_format.rs  spatial_source.rs  supported_buffer.rs  wav_spec.rs
crates/mani/fabled_audio/src/contract/: clip.rs  mod.rs
crates/mani/fabled_audio/src/error/: decoder_error.rs  encoder_error.rs  mod.rs  output_error.rs
crates/mani/fabled_audio/src/mixer/: ambisonic_mixer.rs  mod.rs  spatial_mixer.rs  standard_mixer.rs
crates/mani/fabled_audio/src/renderer/: mod.rs
crates/mani/fabled_audio/src/source/: ambisonic_output.rs  audio_output.rs  audio_spatial_output.rs  mod.rs  sound_controller.rs  spatial_source.rs  standard_output.rs
crates/mani/fabled_binding/: Cargo.toml
crates/mani/fabled_binding/lua_src/: fn_call.lua  multi_param_fn_call.lua  mut_fn_call.lua  rust_fn_call.lua  thread_call.lua
crates/mani/fabled_binding/src/: lib.rs
crates/mani/fabled_binding/src/container/: byte_ty.rs  func_ty.rs  gc_gen.rs  lua_state.rs  mod.rs  option.rs  std_lib.rs
crates/mani/fabled_binding/src/error/: binding_error.rs  mod.rs
crates/mani/fabled_binding/src/initialization/: instance.rs  interop.rs  mod.rs
crates/mani/fabled_concurrency/: Cargo.toml
crates/mani/fabled_concurrency/src/: lib.rs
crates/mani/fabled_core/: Cargo.toml
crates/mani/fabled_core/src/: lib.rs
crates/mani/fabled_core/src/concurrent/: mod.rs
crates/mani/fabled_ecs/: Cargo.toml
crates/mani/fabled_ecs/src/: component.rs
crates/mani/fabled_fbx/: Cargo.toml  fbx_enum_representation.md
crates/mani/fabled_fbx/src/: lib.rs
crates/mani/fabled_fbx/src/container/: geometry_mesh.rs  geometry_mesh_index.rs  material.rs  material_index.rs  mesh.rs  mesh_index.rs  mod.rs  scene.rs  shading_model.rs  texture_index.rs
crates/mani/fabled_fbx/src/error/: load_error.rs  mod.rs
crates/mani/fabled_fbx/src/loader/: any_loader.rs  aperture_loader.rs  aspect_ratio_loader.rs  camera_format_loader.rs  decay_loader.rs  decay_type_loader.rs  gate_fit_loader.rs  light_type_loader.rs  mod.rs  projection_loader.rs  v7400_camera_loader.rs  v7400_light_loader.rs  v7400_loader.rs
crates/mani/fabled_fbx/src/macros/: mod.rs  property_proxy.rs
crates/mani/fabled_fbx/src/properties/: camera_properties.rs  light_properties.rs  mod.rs
crates/mani/fabled_fbx/src/util/: mod.rs  triangulate.rs
crates/mani/fabled_gltf/: Cargo.toml
crates/mani/fabled_gltf/src/: lib.rs
crates/mani/fabled_gltf/src/decoder/: file.txt
crates/mani/fabled_gltf/src/encoder/: file.txt
crates/mani/fabled_gltf/src/texture_format/: mod.rs  texture_format.rs
crates/mani/fabled_obj/: Cargo.toml
crates/mani/fabled_obj/src/: feature  lib.rs  loader.rs  todo
crates/mani/fabled_obj/src/common/: mod.rs  obj_common.rs
crates/mani/fabled_obj/src/container/: illumination_model.rs  imfchan.rs  load_flag.rs  material.rs  material_metadata.rs  mod.rs  model_metadata.rs  parse_command.rs
crates/mani/fabled_obj/src/error/: mod.rs  obj_error.rs
crates/mani/fabled_obj/src/mtl/: async_loader.rs  loader.rs  mod.rs
crates/mani/fabled_obj/src/util/: mod.rs  mtl_parser.rs
crates/mani/fabled_obj/src/wavefront/: async_loader.rs  loader.rs  mod.rs
crates/mani/fabled_render/: Cargo.toml
crates/mani/fabled_render/shader/shader_dump/: flow.Fragment-fs_main.dot  flow.Fun-0.dot
crates/mani/fabled_render/src/: lib.rs  model.rs
crates/mani/fabled_render/src/camera/: mod.rs  todo
crates/mani/fabled_render/src/color/: mod.rs  notes.txt  todo.txt
crates/mani/fabled_render/src/light/: mod.rs  reference.md  todo
crates/mani/fabled_render/src/material/: material_hierarchy.rs  mod.rs  notes  test.rs
crates/mani/fabled_render/src/mesh/: indices.rs  mesh_data.rs  mod.rs  todo.txt  vertex.rs
crates/mani/fabled_render/src/shader/: mod.rs  (+2 more)
crates/mani/fabled_system/: Cargo.toml
crates/mani/fabled_system/src/: lib.rs
crates/mani/fabled_transform/: Cargo.toml  features  todo
crates/mani/fabled_transform/src/: lib.rs
crates/mani/fabled_wgpu/: Cargo.toml
crates/mani/fabled_wgpu/src/: lib.rs  wgpu_render_pass.rs  wgpu_render_resource.rs  wgpu_renderer.rs
crates/mani/fabled_wgpu/wgpu-trace/: trace.ron
crates/mani/lib/: Cargo.toml
crates/mani/shipyard_app/: .gitignore  Cargo.toml  README.md
crates/mani/shipyard_app/src/: add_distinct.rs  app.rs  app_add_cycle.rs  app_builder.rs  lib.rs  plugin.rs  tracked_unique.rs  type_names.rs  update_one_to_one.rs  update_two_to_one.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/component/: camera_component.rs  input_component.rs  light_component.rs  mod.rs  model_component.rs  prelude.rs  render_component.rs  time_component.rs  window_component.rs
lib/src/system/: camera_system.rs  input_system.rs  mod.rs  model_system.rs  prelude.rs  render_system.rs  time_system.rs  window_system.rs
lib/src/util/: camera.rs  constant.rs  math.rs  mod.rs  prelude.rs  shader.rs  texture.rs
(+566 files in other folders)
