[package]
name = "Fabled_Engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
debug = true
opt-level = 3
codegen-units = 3
panic = "abort"

[lib]
name = "lib"
path = "crates/mani/lib/src/lib.rs"

[workspace]
members = ["crates/mani/*"]


#[dependencies.superluminal-perf]
#version = "*"
#optional = true

[dependencies.env_logger]
version = "*"
optional = true

[dependencies.log]
version = "*"
optional = true

[features]
#profiler = ["superluminal-perf"]
logger = ["log" ,"env_logger"]

[dependencies]
fabled_gltf = {path = "crates/mani/fabled_gltf", version = "*"}
fabled_render = {path = "crates/mani/fabled_render", version = "*"}
fabled_audio = {path = "crates/mani/fabled_audio", version = "*"}

# todo others remove
image = "*"
winit = "*"
wgpu = "0.8"
futures = "*"
bytemuck = {version = "*", features = ["derive"]}
tobj = "*"
anyhow = "*"
rayon = "1.4"
glam = {version = "*", features = ["bytemuck"]}
shipyard = {version = "*", features = ["default", "thread_local"]}
superluminal-perf = "*"
naga = {version = "0.4.2", features = ["spv-in", "spv-out", "wgsl-in", "wgsl-out"]} #testing naga
serde = {version = "*", features = ["derive"], optional = true}

[dependencies.gltf]
version = "0.16"
features = ["KHR_materials_unlit", "KHR_materials_pbrSpecularGlossiness", "extras", "names", "utils", "import"]

