[package]
name = "Fabled_Engine"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = true



#[profile.release]
#debug = false
#lto = true
#opt-level = 3
#panic = "abort"
#strip = "true"


[workspace]
members = [
    "crates/mani/fabled_asset",
    "crates/mani/fabled_math",
    "crates/mani/fabled_transform",
    "crates/mani/fabled_component",
    "crates/mani/fabled_render",
    "crates/mani/fabled_audio",
    "crates/mani/fabled_system",
    "crates/mani/fabled_wgpu",
]
