[package]
name = "lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "*", features = ["bytemuck"]}
wgpu = "0.8"
winit = "*"
anyhow = "*"
shipyard = "*"
image = "*"
bytemuck = {version = "*", features = ["derive"]}
tobj = "*"
rayon = "*"