[package]
name = "fabled_asset"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I will be moving away from assets_manager to a custom approach in the future.
# There will be alot of breaking changes in the future.
assets_manager  = {version = "*"}