[package]
name = "fabled_audio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"

cpal = {version = "0.13.4"}
ambisonic = {version = "0.4.1" }

hound = {version = "3.4.0"}

ogg = {version = "0.8.0", features = ["async"]}
lewton = {version = "0.10.2", features = ["async_ogg"]}

claxon = {version = "0.4.3"}

minimp3 = {version ="0.5.1", features = ["async_tokio"]}

parking_lot = { version = "0.12.0" }

mlua = {version = "0.8.1", features = ["lua54", "vendored", "async"]}
fabled_binding = {path = "../fabled_binding", version = "0.1.0"}

