[package]
name = "fabled_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
serde = {version = "1.0.126", features = ["derive"]}
bytemuck = {version = "1.7.0", features = ["derive"]}