[package]
name = "fabled_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = {git = "https://github.com/leudz/shipyard", branch = "master" , features = ["thread_local", "proc", "parallel"]}
