[package]
name = "fabled_gltf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gltf = {version = "0.16.0", features = ["KHR_materials_ior"] }
# features [default, extra, names, util, import, KHR_lights_punctual, KHR_materials_pbrSpecularGlossiness, KHR_materials_unlit,
# KHR_texture_transform, KHR_materials_transmission, KHR_materials_ior, image_jpeg_rayon, guess_mime_type