[package]
name = "fabled_obj"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = {version ="3.2.0", features = [ "async"]}

glob = "0.3.0"
bitflags = {version = "1.2.1"}
rayon = {version = "1.5.1" }
parking_lot = { version = "0.11.2" }
thiserror = "1.0.29"

fabled_render = {path = "../fabled_render", version = "*"}
