[package]
name = "fabled_render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Texture
texture-synthesis = { version = "0.8.1"}
image = { version = "0.23.12", features = ["default", "hdr", "jpeg_rayon", "dds"]}
imageproc = {version = "0.22.0", features = ["default"] }
libktx-rs = {version = "0.2.4", features = ["default"]}
basis-universal = "0.1.1"
basis-universal-sys = "0.1.1"
#ddsfile = {version = "*"}

# Core
serde = "1.0.126"
anyhow = {version = "1.0.42"}
bytemuck = {version = "1.7.0", features = ["derive"]}
bitflags = "1.2.1"
glob = "0.3.0"
fabled_core = {path = "../fabled_core", version = "*"}

# Shader
naga = {version = "0.5.0", features = ["wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "spv-out", "spv-in", "serialize", "deserialize"]}
ron = "0.6.0"


# Miscellaneous
ansi_term = {version = "0.12.1"}


# Features
[features]
"ktx_low" = ["libktx-rs-sys"]


[dependencies.libktx-rs-sys]
version = "0.2.44"
optional = true

