[package]
name = "fabled_render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Texture
image = { version = "0.23.12", features = ["default", "hdr", "jpeg_rayon", "dds"]}
libktx-rs = {version = "0.2.4", features = ["default"]}
basis-universal = "0.1.1"
basis-universal-sys = "0.1.1"

# Core
serde = "1.0.126"
thiserror = "1.0.29"
anyhow = {version = "1.0.42"}
bytemuck = {version = "1.7.0", features = ["derive"]}
bitflags = "1.2.1"
glob = "0.3.0"
fabled_core = {path = "../fabled_core", version = "*"}
fabled_transform = {path = "../fabled_transform", version = "*"}
rustc-hash = {version = "1.0.1"}
slotmap = {version = "1.0.6", features = ["serde"] }

# Shader
naga = {version = "0.5.0", features = ["wgsl-in", "wgsl-out", "glsl-in", "glsl-out", "spv-out", "spv-in", "serialize", "deserialize"]}
ron = "0.6.0"

# Mesh
# Remove later since fabled_math will have all the mathematical calculation and function.
glam = {version = "0.20.1", features = ["bytemuck"]}

# EXT
gltf = {version = "0.16.0", features = ["KHR_lights_punctual", "KHR_materials_ior"]}

# Features
[features]
"ktx_low" = ["libktx-rs-sys"]

[dependencies.libktx-rs-sys]
version = "0.2.44"
optional = true

