[package]
name = "fabled_render"
version = "0.1.0"
edition = "2018"

[dependencies]

image = { version = "0.23.12", features = ["default", "hdr", "jpeg_rayon", "dds"]}
libktx-rs = {version = "0.2.4", features = ["default"]}

basis-universal = "0.2.0"
basis-universal-sys = "0.2.0"

fabled_math = {path ="../fabled_math", version = "*"}


thiserror = "1.0.30"
anyhow = {version = "1.0.42"}
bytemuck = {version = "1.7.0", features = ["derive"]}

# Features
[features]
"ktx_low" = ["libktx-rs-sys"]

[dependencies.libktx-rs-sys]
version = "0.2.44"
optional = true

