[package]
name = "fabled_system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = {version = "0.6.2", features = ["thread_local", "parallel"]}
fabled_transform = {path = "../fabled_transform", version = "*"}
fabled_render = {path = "../fabled_render", version = "*"}
fabled_math = {path = "../fabled_math", version = "*"}
rayon = {version = "1.5.1"}
bitflags = {version = "2.3.1"}
crunchy = {version = "0.2.2", features = ["default"]}
