[package]
name = "fabled_transform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.22.0", features = ["bytemuck"]}
fabled_component = {path ="../fabled_component", version = "*"}

#shipyard = {git = "https://github.com/leudz/shipyard", branch = "master" , features = ["thread_local", "proc", "parallel"]}
