[package]
name = "lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "*", features = ["bytemuck", "serde"]}
wgpu = "0.11.0"
winit = "*"
anyhow = "*"
shipyard = "*"
image = "*"
bytemuck = {version = "*", features = ["derive"]}
tobj = "*"
rayon = "*"
ddsfile = "*"
fabled_render = {path = "./../fabled_render", version = "*"}