[package]
name = "lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "*", features = ["bytemuck", "serde"]}
wgpu = "0.9.0"
winit = "*"
anyhow = "*"
shipyard = "*"
image = "*"
bytemuck = {version = "*", features = ["derive"]}
rayon = "*"
ddsfile = "*"
fabled_render = {path = "./../fabled_render", version = "*"}
fabled_obj = {path = "./../fabled_obj", version = "*" }